chore: fix workflow [skip-ci]

--- a/.github/workflows/passbolt-cli-docker.yml
+++ b/.github/workflows/passbolt-cli-docker.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - name: Login to gh
-        run: git config --global url.https://${{ ORGANIZATION }}:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
+        run: git config --global url.https://${{ env.ORGANIZATION }}:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
 
       - name: Checkout code
         uses: actions/checkout@v3
