fix: ignore passbolt-cli for passbolt-cli-action release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ env:
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "./docker"
+      - ".github/workflows/passbolt-cli-docker.yml"
 
 concurrency: release-in-progress
 
