--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
     if: github.event.pull_request.draft == false
     steps:
       - name: Login to gh
-        run: git config --global url.https://tuxillo:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
+        run: git config --global url.https://${{ env.ORGANIZATION }}:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
 
       - name: Checkout code
         uses: actions/checkout@v3
