--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       - name: Login to gh
-        run: git config --global url.https://tuxillo:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
+        run: git config --global url.https://${{ env.ORGANIZATION }}:${{ secrets.ACTION_CLONE_TOKEN }}@github.com/.insteadOf https://github.com/
 
       - name: Checkout code
         uses: actions/checkout@v3
